# nautilus_ibapi

./: .gitignore  Makefile  README.md  pylintrc  pyproject.toml  setup.py
.github/workflows/: detect-release  detect-release.yml  publish.yml
ibapi/: __init__.py  account_summary_tags.py  client.py  client_utils.py  comm.py  commission_and_fees_report.py  commission_report.py  common.py  connection.py  const.py  contract.py  decoder.py  decoder_utils.py  enum_implem.py  errors.py  execution.py  ibapi.pyproj  ineligibility_reason.py  message.py  news.py  order.py  order_cancel.py  order_condition.py  order_state.py  orderdecoder.py  reader.py  scanner.py  server_versions.py  softdollartier.py  sync_wrapper.py  tag_value.py  ticktype.py  utils.py  wrapper.py
ibapi/protobuf/: AccountDataEnd_pb2.py  AccountDataRequest_pb2.py  AccountSummaryEnd_pb2.py  AccountSummaryRequest_pb2.py  AccountSummary_pb2.py  AccountUpdateMultiEnd_pb2.py  AccountUpdateMulti_pb2.py  AccountUpdateTime_pb2.py  AccountUpdatesMultiRequest_pb2.py  AccountValue_pb2.py  AllOpenOrdersRequest_pb2.py  ApiConfig_pb2.py  ApiPrecautionsConfig_pb2.py  ApiSettingsConfig_pb2.py  AttachedOrders_pb2.py  AutoOpenOrdersRequest_pb2.py  CalculateImpliedVolatilityRequest_pb2.py  CalculateOptionPriceRequest_pb2.py  CancelAccountSummary_pb2.py  CancelAccountUpdatesMulti_pb2.py  CancelCalculateImpliedVolatility_pb2.py  CancelCalculateOptionPrice_pb2.py  CancelContractData_pb2.py  CancelPnL_pb2.py  (+180 more)
tests/: manual.py  test_account_summary_tags.py  test_comm.py  test_enum_implem.py  test_order_conditions.py  test_utils.py
