[tool.poetry]
name = "ibapi"
version = "0.1.0"
description='Python IB API'
authors = ['IBG LLC <dnastase@interactivebrokers.com>']
readme = "README.md"
repository = 'https://interactivebrokers.github.io/tws-api'
license = 'IB API Non-Commercial License or the IB API Commercial License'

[tool.poetry.dependencies]
python = ">=3.9,<3.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
