[tool.poetry]
name = "nautilus_ibapi"
version = "10.37.02"
description="Python IB API"
authors = ["IBG LLC <dnastase@interactivebrokers.com>"]
readme = "README.md"
repository = "https://interactivebrokers.github.io/tws-api"
license = "IB API Non-Commercial License or the IB API Commercial License"
include = ["ibapi/**/*"]
packages = [{include = "ibapi"}]

[tool.poetry.dependencies]
python = ">=3.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
